--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
   color-scheme: dark light;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1C1C1E;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
