--- a/src/style.css
+++ b/src/style.css
@@ -45,8 +45,7 @@ body,
     max-height: 100dvh;
 }
 
-input {
+input, button {
     border-color: #27272a;
-
     @apply w-full outline-none px-3 py-2 rounded-md bg-transparent focus:ring border;
 }
